# backend

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  compose.dev.yml  compose.yml  entrypoint.sh  run-dev.sh  shell.nix
.woodpecker/: build-and-publish.yml  publish-docs.yml
migrations/2025-05-21-192435_create_users/: down.sql  up.sql
migrations/2025-05-21-192936_create_instance_permissions/: down.sql  up.sql
migrations/2025-05-21-193321_create_tokens/: down.sql  up.sql
migrations/2025-05-21-193500_create_guilds/: down.sql  up.sql
migrations/2025-05-21-193620_create_roles/: down.sql  up.sql
migrations/2025-05-21-193745_create_channels/: down.sql  up.sql
migrations/2025-05-21-193954_create_messages/: up.sql
migrations/2025-05-21-194207_create_invites/: down.sql  up.sql
migrations/2025-05-21-203022_channel_description_nullable/: down.sql  up.sql
migrations/2025-05-23-112318_add_guild_icons/: down.sql  up.sql
migrations/2025-05-23-113933_add_user_avatars/: down.sql  up.sql
migrations/2025-05-26-181536_add_channel_ordering/: down.sql  up.sql
migrations/2025-05-27-105059_redo_role_ordering/: down.sql  up.sql
migrations/2025-05-27-162114_create_email_tokens/: down.sql  up.sql
migrations/2025-05-28-175918_create_password_reset_tokens/: down.sql  up.sql
migrations/2025-06-01-134036_add_pronouns_to_users/: down.sql  up.sql
migrations/2025-06-01-143713_add_about_to_users/: down.sql  up.sql
migrations/2025-06-03-103311_remove_email_tokens/: down.sql  up.sql
migrations/2025-06-03-110142_remove_password_reset_tokens/: down.sql  up.sql
migrations/2025-06-03-123458_federated_instances/: down.sql  up.sql
migrations/2025-06-06-145916_guild_ownership_changes/: down.sql  up.sql
migrations/2025-07-02-192220_change_maximum_url_lengths/: down.sql  up.sql
migrations/2025-07-04-183201_add_replies_to_messages/: down.sql  up.sql
migrations/2025-07-07-131320_add_friends/: down.sql  up.sql
migrations/2025-07-12-135941_add_channel_categories/: down.sql  up.sql
migrations/2025-07-13-155008_unique_guild_members/: down.sql  up.sql
migrations/2025-07-15-002434_increase_device_name_length/: down.sql  up.sql
migrations/2025-07-21-014019_message_is_edited/: down.sql  up.sql
migrations/2025-07-22-195121_add_ban/: down.sql  up.sql
migrations/2025-07-31-133510_roles_uuid_index/: down.sql  up.sql
migrations/2025-08-04-180235_add_status_to_user/: down.sql  up.sql
migrations/2025-08-04-195527_add_audit_log/: down.sql  up.sql
src/: config.rs  crypto.rs  error.rs  generate_device_name.rs  main.rs  schema.rs  socket.rs  structs.rs  tables.rs  utils.rs  wordlist.rs  wss.rs
src/api/: mod.rs  versions.rs
src/api/v0/: channel.rs  mod.rs  send.rs
src/api/v1/: login.rs  mod.rs  register.rs  socket.rs  stats.rs  user.rs
src/api/v1/auth/: devices.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs  reset_password.rs  revoke.rs  verify_email.rs
src/api/v1/channels/: mod.rs
src/api/v1/channels/uuid/: messages.rs  mod.rs  socket.rs
src/api/v1/federation/: mod.rs  pubkey.rs
src/api/v1/guilds/: mod.rs
src/api/v1/guilds/uuid/: audit_logs.rs  auditlogs.rs  bans.rs  categories.rs  channels.rs  icon.rs  members.rs  mod.rs
src/api/v1/guilds/uuid/invites/: mod.rs
src/api/v1/guilds/uuid/roles/: mod.rs  uuid.rs
src/api/v1/invites/: id.rs  mod.rs
src/api/v1/me/: guilds.rs  mod.rs  servers.rs
src/api/v1/me/friends/: mod.rs  uuid.rs
src/api/v1/member/: mod.rs
src/api/v1/member/uuid/: mod.rs
src/api/v1/members/: mod.rs
src/api/v1/members/uuid/: ban.rs  mod.rs
src/api/v1/servers/: mod.rs  uuid.rs
src/api/v1/servers/channels/: mod.rs
src/api/v1/servers/uuid/: icon.rs  mod.rs
src/api/v1/servers/uuid/channels/: mod.rs
src/api/v1/servers/uuid/channels/uuid/: messages.rs  mod.rs  socket.rs
src/api/v1/servers/uuid/invites/: id.rs  mod.rs
src/api/v1/servers/uuid/roles/: mod.rs  uuid.rs
src/api/v1/users/: me.rs  mod.rs  uuid.rs
src/objects/: audit_log.rs  auditlog.rs  bans.rs  categories.rs  channel.rs  email_token.rs  friends.rs  guild.rs  invite.rs  me.rs  member.rs  message.rs  mod.rs  password_reset_token.rs  role.rs  signature.rs  user.rs
