[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Speed up compilation to make dev bearable
[profile.dev]
debug = 0
strip = "debuginfo"
codegen-units = 512

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11"
argon2 = { version = "0.5.3", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
getrandom = "0.3"
hex = "0.4"
log = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0.0"
redis = { version = "0.32", features= ["tokio-comp"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls", "url"] }
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17", features = ["serde", "v7"] }
random-string = "1.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
bunny-api-tokio = { version = "0.4", features = ["edge_storage"], default-features = false }
bindet = "0.3.2"
deadpool = "0.12"
diesel = { version = "2.2", features = ["uuid", "chrono"], default-features = false }
diesel-async = { version = "0.5", features = ["deadpool", "postgres", "async-connection-wrapper"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
thiserror = "2.0.12"
actix-multipart = "0.7.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dependencies.tokio]
version = "1.45"
features = ["full"]
